--- a/IFDotNet.csproj
+++ b/IFDotNet.csproj
@@ -5,10 +5,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<PackageId>IFDotNet</PackageId>
+	<Version>0.0.1</Version>
+	<Authors>Gordinator</Authors>
+	<RepositoryUrl>https://git.gordinator.org/Gordinator/IFDotNet</RepositoryUrl>
+	<PackageLicenseExpression>MIT</PackageLicenseExpression>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Spectre.Console" Version="0.49.1" />
+	  <PackageReference Include="Spectre.Console" Version="0.49.1" />
+	  <None Include="README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
